# grafana-plugin-sdk-rs

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  deny.toml
ci/: Dockerfile
crates/grafana-plugin-sdk-rs/: Cargo.toml  build.rs
crates/grafana-plugin-sdk-rs-macros/: Cargo.toml
crates/grafana-plugin-sdk-rs-macros/src/: lib.rs
crates/grafana-plugin-sdk-rs-macros/tests/ui-fail/: non_impl_service.stderr
crates/grafana-plugin-sdk-rs/examples/: app_plugin.rs
crates/grafana-plugin-sdk-rs/src/: buildinfo.rs  httpadapter.rs  httpclient.rs  lib.rs
crates/grafana-plugin-sdk-rs/src/backend/: admission.rs  conversion.rs  data.rs  diagnostics.rs  grafana_config.rs  instance.rs  mod.rs  mtls.rs  noop.rs  otel.rs
crates/grafana-plugin-sdk-rs/src/data/: field.rs
crates/grafana-plugin-sdk-rs/src/data/frame/: mod.rs
crates/grafana-plugin-sdk-rs/src/live/: channel.rs  mod.rs
crates/grafana-plugin-sdk-rs/src/pluginv2/: pluginv2.rs
crates/grafana-plugin-sdk-rs/tests/: lifecycle.rs
