[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
# This project is a fork of `grafana-plugin-sdk-rust` by Ben Sully (Grafana Labs),
# re-focused on a lean, protocol-first core.
authors = [
    "zornfeuer",
    "Ben Sully <ben.sully@grafana.com>",
]
repository = "https://gitlab.com/zornfeuer/grafana-plugin-sdk-rs"
homepage = "https://gitlab.com/zornfeuer/grafana-plugin-sdk-rs"
keywords = ["grafana", "plugin", "sdk", "backend", "datasource"]
categories = ["api-bindings", "web-programming"]
